--- a/app/locales/es.json
+++ b/app/locales/es.json
@@ -10,7 +10,8 @@
     "edit": "Editar",
     "loading": "Cargando...",
     "error": "Error",
-    "success": "Éxito"
+    "success": "Éxito",
+    "copied": "¡Copiado!"
   },
   "startScreen": {
     "createNewRoom": "Crear Nueva Sala",
